<resources>
    <string name="app_name">Numen</string>
    <string name="app_description">Keep you safe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--通用-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>

    <!-- 登录页 -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Please input</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="agreement_read">I have read this agreement</string>

    <!--安全设置页-->
    <string name="title_activity_safe">Settings</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="tip_activity_safe">Set password</string>
    <string name="different_password">Different password</string>
    <string name="save_settings_success">Save settings success</string>
    <string name="choose_upload_type">Choose notification type</string>

    <!-- nav start -->
    <string name="nav_home">Home</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_urgent_contacts">Urgent contacts</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <!-- nav end -->

    <!-- contacts start -->
    <string name="contact_name">Contact Name</string>
    <string name="contact_phone_number">Phone Number</string>
    <string name="contact_add">Add Contact</string>
    <string name="contact_choice">Choose</string>

    <string name="error_contact_name_required">Please input contact name</string>
    <string name="error_contact_phone_number_required">Please input contact phone number</string>
    <!-- contacts end -->

    <!-- urgent contact start -->
    <string name="tip_urgent_contact_add">Add to urgent contact</string>
    <string name="tip_urgent_contact_remove">Remove urgent contact</string>
    <string name="tip_urgent_contact_already_exist">The urgent contact already exist</string>
    <!-- urgent contact end -->

</resources>
