<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_urgent_contacts"
            android:icon="@drawable/ic_menu_contacts_black_24dp"
            android:title="@string/nav_urgent_contacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help_black_24dp"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info_black_24dp"
            android:title="@string/nav_about" />
    </group>
</menu>
