<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cb_agree"/>

    <CheckBox
        android:id="@+id/cb_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_above="@+id/ok"
        android:text="@string/agreement_read"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/disagree"/>

    <Button
        android:id="@+id/ok"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/agree"/>



</RelativeLayout>